MODEMAIL-114 Upgrade module to Vert.x 5.0 (#117)
* MODEMAIL-114 Refactor email handling to use Future instead of Promise for asynchronous operations

* MODEMAIL-114 Refactor tests to use Future instead of Promise for asynchronous operations

* MODEMAIL-114 Update pom.xml to use property versions for dependencies and plugins

* MODEMAIL-114 Refactor email processing to improve error logging and update pom.xml for dependency management

* MODEMAIL-114 Refactor email test setup to use insecure random string generation for sender and recipient

* MODEMAIL-114 Refactor email storage service methods to return Void instead of JsonObject and improve environment variable handling

* MODEMAIL-114 Add tests for EnvUtils and MailServiceImpl to validate constructor behavior and handle invalid email JSON